kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experiments-deployment
  labels:
    app: experiments
spec:
  replicas: 3
  selector:
    matchLabels:
      app: experiments
  template:
    metadata:
      labels:
        app: experiments
    spec:
      containers:
      - name: experiments
        image: XXXX
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "1024Mi"
            cpu: "600m"
