kubernetes/base/private_service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "private-experiments"
  namespace: "default"
  labels:
    app: "experiments"
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: "experiments"
  type: "ClusterIP"
