kubernetes/base/public_service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "public-experiments"
  namespace: "default"
  labels:
    app: "experiments"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: "experiments"
  type: "LoadBalancer"
  loadBalancerIP: ""
