kubernetes/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "experiments"
  namespace: "default"
  labels:
    app: "experiments"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "experiments"
  type: "LoadBalancer"
  loadBalancerIP: ""
