kubernetes/base/ingress.yml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: elecular-app
    kubernetes.io/ingress.global-static-ip-name: elecular-app
spec:
  rules:
    http:
      paths:
      - path: /api/experiments
        backend:
          serviceName: public-experiments
          servicePort: 3000
      - path: /api/user-activity
        backend:
          serviceName: user-activity
          servicePort: 3000
